--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
     "@rails/activestorage": "^6.0.5",
     "@rails/ujs": "^6.0.5",
-    "@rails/webpacker": "5.4.3",
+    "@rails/webpacker": "^5.4.4",
     "bootstrap": "3.4.1",
     "channels": "^0.0.4",
+    "i18n-js": "^4.2.3",
     "jquery": "3.4.1",
+    "prop-types": "^15.8.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
