--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "channels": "^0.0.4",
     "i18n-js": "^4.2.3",
     "jquery": "3.4.1",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
+    "query-string": "^8.1.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
