--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/webpacker": "^5.4.4",
     "bootstrap": "3.4.1",
     "channels": "^0.0.4",
+    "daypilot-pro-react": "https://npm.daypilot.org/daypilot-pro-react/trial/2023.2.5565.tar.gz",
     "i18n-js": "^4.2.3",
     "jquery": "3.4.1",
     "lodash": "^4.17.21",
@@ -13,6 +14,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-calendar": "^4.2.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
