--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "3.4.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "node": "^16.15.1",
     "prop-types": "^15.8.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
