--- a/config/database.yml
+++ b/config/database.yml
@@ -86,5 +86,5 @@ test:
 production:
   <<: *default
   database: organizer_app_production
-  username: organizer_app
+  username: postgres
   password: <%= ENV["ORGANIZER_APP_DATABASE_PASSWORD"] %>
